--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<html>
+<head>
+  <title>Ava Silly cat 🐈</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="wrapper">
+    <header>
+      <h1>Ava's Cool site</h1>
+    </header>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="myArt.html">My Art</a>
+      <a href="blog.html">Blog</a>
+      <a href="coolStuff.html">Cool Stuff</a>
+    </nav>
 
+    <h1>Ava Silly cat 🐈</h1>
+    <section>
+      <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Curabitur blandit tempus porttitor. Sed posuere consectetur est at lobortis. Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+    </section>
+  </div>
+</body>
+</html>
