--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Ava Silly cat 🐈</title>
+  <title>welcome to planet jam! enjoy your stay :)</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
