--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,9 @@
       </nav>
       <h1>Blog</h1>
       <section class="blogArticle">
+        <h3>Check out my dad's site!</h3>
+        <p><a href="http://drewharper.com" target="_blank">http://drewharper.com</a>
+        </p>
         <h3>My first blog article</h3>
         <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae quaerat dolore similiquemolestias praesentium voluptatum voluptate soluta aperiam accusamus illo deserunt,consequuntur voluptates explicabo voluptas itaque? Obcaecati odit reiciendis quod.
         </p>
