--- a/myArt.html
+++ b/myArt.html
@@ -6,7 +6,7 @@
 <body>
   <div class="wrapper">
     <header>
-      <h1>Ava's Cool site</h1>
+      <h1>Ava's Cool site!!</h1>
     </header>
     <nav>
       <a href="index.html">Home</a>
