--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 </head>
 <body>
   <div class="wrapper">
-    yippee
+
     <header>
       <h1>Ava's Cool site YAY!</h1>
     </header>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="index.html">Home Ava is goofy</a>
       <a href="myArt.html">My Art</a>
       <a href="blog.html">Blog</a>
       <a href="coolStuff.html">Cool Stuff</a>
@@ -19,7 +19,6 @@
     <h1>Ava Silly cat 🐈</h1>
     <section>
       <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Curabitur blandit tempus porttitor. Sed posuere consectetur est at lobortis. Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-    </section>
-  </div>
+    </section>  </div>
 </body>
 </html>
