--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <h1>Ava's Cool site YAY!</h1>
     </header>
     <nav>
-      <a href="index.html">Home Ava is goofy</a>
+      <a href="index.html">Home Ava is a cat!</a>
       <a href="myArt.html">My Art</a>
       <a href="blog.html">Blog</a>
       <a href="coolStuff.html">Cool Stuff</a>
